--- a/leptospirosis.html
+++ b/leptospirosis.html
@@ -300,7 +300,7 @@
       });
     }
 
-    function calculateScore() {
+function calculateScore() {
   let score = 0;
 
   // Adding scores based on the selected options
@@ -314,23 +314,7 @@
   // Update total score display
   document.getElementById('totalScore').value = score;
 
-  // Show alert with result
-  let resultMessage;
-  if (score > 10) {
-    resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
-  } else {
-    resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + score + '. ขอบคุณที่กรอกแบบฟอร์ม!';
-  }
-
-  Swal.fire({
-    title: 'ผลการคำนวณคะแนน',
-    text: resultMessage,
-    icon: 'info',
-    confirmButtonText: 'ตกลง'
-  }).then(() => {
-    // กดตกลงแล้ว จึงเรียก submitForm()
-    submitForm();
-  });
+  return score;
 }
 
 function submitForm() {
@@ -367,10 +351,25 @@ function submitForm() {
   }
 
   // Calculate score before submitting
-  calculateScore();
+  const totalScore = calculateScore();
 
-  // ส่งข้อมูลอัตโนมัติ
-  sendFormData();
+  // Show alert with result
+  let resultMessage;
+  if (totalScore > 10) {
+    resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + totalScore + '. กรุณาเดินทางไปยังโรงพยาบาลหรือหน่วยบริการใกล้บ้านเพื่อตรวจวินิจฉัยเบื้องต้นโดยด่วน!';
+  } else {
+    resultMessage = 'คะแนนความเสี่ยงของท่านคือ ' + totalScore + '. ขอบคุณที่กรอกแบบฟอร์ม!';
+  }
+
+  Swal.fire({
+    title: 'ผลการคำนวณคะแนน',
+    text: resultMessage,
+    icon: 'info',
+    confirmButtonText: 'ตกลง'
+  }).then(() => {
+    // ส่งข้อมูลอัตโนมัติ
+    sendFormData();
+  });
 }
 
 function sendFormData() {
